@@ -1,3 +1,12 @@
+2004-03-09  Roger Sayle  <roger@eyesopen.com>
+
+	PR middle-end/14289
+	* c-typeck.c (c_mark_addressable): A register variable should
+	be considered global if its not automatic, i.e. TREE_PUBLIC,
+	TREE_STATIC or DECL_EXTERNAL.
+	* function.c (put_var_into_stack): Call abort when placing a
+	hard register into the stack, if x_parm_reg_stack_loc is NULL.
+
 2004-03-08  David Edelsohn  <edelsohn@gnu.org>
 
 	* collect2.c (main): Only export initfunc and finifunc if
